twitter-bot-deployment.yml
apiVersion: apps/v1 
kind: Deployment
metadata:
  name: twitterbot
  namespace: default
  labels:
    app: twitterbot
spec:
  replicas: 1
  selector:
    matchLabels:
      app: twitterbot
  template:
    metadata:
      labels:
        app: twitterbot
    spec:
      containers:
      - name: twitter-analytics-bot
        image: bbertka/twitter-analytics-bot:latest
        ports:
        - containerPort: 8080
