twitter-bot-service.yml
apiVersion: v1
kind: Service
metadata:
  name: "service-twitter-bot"
spec:
  ports:
    - port: 80
      targetPort: 8080
      protocol: TCP
  type: NodePort
  selector:
    app: "twitterbot"
