twitterbot-deployment.yml
---
apiVersion: v1
kind: Namespace
metadata:
  name: twitterbot
---
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: twitterbot
  name: deployment-twitterbot
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: app-twitterbot
  replicas: 1
  template:
    metadata:
      labels:
        app.kubernetes.io/name: app-twitterbot
    spec:
      containers:
      - image: bbertka/twitter-analytics-bot:latest
        imagePullPolicy: Always
        name: twitter-analytics-bot
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  namespace: twitterbot
  name: service-twitterbot
spec:
  ports:
    - port: 80
      targetPort: 8080
      protocol: TCP
  type: NodePort
  selector:
    app.kubernetes.io/name: app-twitterbot
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: twitterbot
  name: ingress-twitterbot
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
spec:
  ingressClassName: alb
  rules:
    - http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: service-twitterbot
              port:
                number: 80
